fixed animation turning invisible after last key frame

--- a/src/App.css
+++ b/src/App.css
@@ -83,9 +83,11 @@ body {
   /* left: -100px; */
   /* left: -15px; */
   /* transition: left 0.5s ease-in; */
-  animation-delay: 2s;
+  animation-delay: 2.5s;
   animation-duration: 1.3s;
   animation-name: slidein;
+  animation-fill-mode: forwards;
+  opacity: 0;
 }
 
 @keyframes slidein {
@@ -116,6 +118,7 @@ body {
 
   100% {
     left: 0;
+    opacity: 1;
   }
 }
 
